--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -49,8 +49,9 @@ table {
 body {
   margin: 0 auto;
   font-family: 'ArialBlack', sans-serif;
-  background-color: white;
+  background-color: #f5f5f5;
 }
+
 
 .video__container{
   display: flex;
@@ -61,5 +62,6 @@ body {
   padding-top: 50px;
   max-width: 1800px;
   height: 100%;
+  background-color: grey
 }
 
